[package]
name = "qe_actix"
version = "0.1.0"
edition = "2024"
exclude = ["/talend_api_tester", "/tests"]

[dependencies]
actix-web = "4.11.0"
openssl = { version = "0.10", features = ["vendored"] } # 添加vendored特性
binance-sdk = { version = "6.0.0", features = [
    "derivatives_trading_usds_futures",
    "spot",
    "sub_account",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.11"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rust_decimal = "1.37.2"
